# xrpl-xahau-bridge

./: .env.sample  .gitignore  DOCUMENTATION.md  Dockerfile  LICENSE  README.md  TODO.md  app.py  docker-compose.yml  invoke.json  playground.py  pyproject.toml
test/fixtures/: C0A994A4F1A58840FF88BC9188936DBC42DD63688112B8C465904D9C2B78C2D2  xahau.xpop.txt
xrpl_xahau_bridge/: main.py  utils.py  xpop.py
xrpl_xahau_bridge/libs/: fireblocks.py
